# Project_Time

./: .gitignore  Pre_processing.ipynb  README.md  pyproject.toml
docs/: architecture.md  cleaning_playbook.md
examples/: sample_groundwater.csv
src/project_time/: __init__.py  cleaning.py  cli.py  forecasting.py  metrics.py  timesfm_integration.py
src/project_time/web/: __init__.py  app.py
src/project_time/web/static/: app.js  index.html  styles.css
tests/: test_cleaning.py  test_forecasting.py
